# chaotic_turtle_maniac

./: CMakeLists.txt  README.md
res/: animation.xcf  background.xcf  holy_salad.xcf  powerup.xcf  turtle.xcf  turtle_hatch_open.xcf  turtle_hatch_opening.xcf  turtle_hatch_shooting.xcf
src/client/: Animation.cpp  Animation.h  CMakeLists.txt  GameState.cpp  GameState.h  TextureManager.cpp  TextureManager.h  tm_client.cpp
src/client/network/: ClientSocket.cpp  ClientSocket.h
src/client/objects/: GameObject.h  Tickable.cpp  Tickable.h  Turtle.cpp  Turtle.h
src/common/: CMakeLists.txt  Console.cpp  Console.h  Logger.cpp  Logger.h  packet_types.cpp  packet_types.h
src/server/: CMakeLists.txt  TurtleManiacServer.cpp  TurtleManiacServer.h  tm_server.cpp  turtle_maniac_server.cpp
src/server/network/: TurtleManiacServer.cpp  TurtleManiacServer.h
